<resources>
    <string name="app_name">HrodnaDay</string>
    <string name="HRODNA_DAY">HRODNA DAY</string>
    <string name="ARCHIVE">ARCHIVE</string>
    <string name="ABOUT">ABOUT</string>
    <string name="LANGUAGE">Language</string>
    <string name="ENGLISH">English</string>
    <string name="RUSSIAN">Русский</string>
    <string name="BELARUSIAN">Беларуская</string>
    <string name="LEAVE_MESSAGE">Do you want leave?</string>
    <string name="LEAVE">Leave</string>
    <string name="NO">No</string>
    <string name="TOMORROW">Tomorrow</string>
    <string name="TODAY">Today</string>
    <string name="SEARCH">Search</string>
    <string name="SEARCH_HINT">Search</string>
    <string name="DAY_NIGHT">Day/Night</string>
    <string name="ADVANCE_MENU_ITEM">Advance</string>
    <string name="SEND_NOTIFICATION">Send notification</string>
    <string name="COME_BACK_TOMORROW">Come back tomorrow to get your pic of history!</string>
    <string name="HRODNA_DAY_TEAM">HrodnaDay team</string>
    <string name="WORK_TIME">Work time:</string>
    <string name="CONTACTS">Contacts:</string>
    <string name="ADDRESS">Address:</string>
    <string name="MUSEUM_DESCRIPTION">About museum:</string>
    <string name="YOUR_PEACE_OF_HISTORY">Your peace of Hrodna history</string>
    <array name="DAYS">
        <item name="Monday">Mon</item>
        <item name="Thursday">Thu</item>
        <item name="Wednesday">Wen</item>
        <item name="Tuesday">Tue</item>
        <item name="Friday">Fri</item>
        <item name="Saturday">Sut</item>
        <item name="Sunday">Sun</item>
        <item name="Break">Break</item>
        <item name="NotWork">Not work</item>
    </array>
</resources>
