<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.github.kiolk.hrodnaday.ui.activites.MuseumActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:expandedTitleMarginStart="70dp">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:elevation="15dp"
            >
            <android.support.design.widget.CollapsingToolbarLayout
               android:id="@+id/collapsing_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:src="@drawable/ic_coat_of_arms_of_hrodna"/>
                <android.support.v7.widget.Toolbar
                    android:id="@+id/museum_tool_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:text="Title of tool bar"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin"
                    android:minHeight="?attr/actionBarSize"/>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="?attr/generalBackground"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/BlockInformationStyle">
                    <TextView
                        android:id="@+id/full_museum_name_text_view"
                        android:layout_width="wrap_content"
                        android:textSize="@dimen/TITLE_TEXT_SIZE"
                        android:padding="@dimen/SMALL_NOTE_PADDING"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/WORK_TIME"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/SMALL_TEXT_SIZE"
                        android:padding="@dimen/SMALL_NOTE_PADDING"/>
                    <TextView
                        android:id="@+id/work_time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/SMALL_TEXT_SIZE"
                        android:padding="@dimen/SMALL_NOTE_PADDING"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/BlockInformationStyle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/TITLE_TEXT_SIZE"
                        android:text="@string/CONTACTS"/>
                    <TextView
                        android:id="@+id/phone_one_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/SMALL_TEXT_SIZE"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/phone_two_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/SMALL_TEXT_SIZE"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/phone_three_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/SMALL_TEXT_SIZE"
                        android:visibility="gone"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/BlockInformationStyle"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/location_museum_image_view">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/TITLE_TEXT_SIZE"
                            android:text="@string/ADDRESS"/>
                        <TextView
                            android:id="@+id/address_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/SMALL_TEXT_SIZE"
                            android:visibility="gone"/>
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/location_museum_image_view"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_map_location"/>
                </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        style="@style/BlockInformationStyle">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/TITLE_TEXT_SIZE"
                            android:text="@string/MUSEUM_DESCRIPTION"/>
                        <TextView
                            android:id="@+id/museum_description_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/SMALL_TEXT_SIZE"
                            android:visibility="gone"/>
                    </LinearLayout>

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.DrawerLayout>
